<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="250dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding_too_large_30"
                android:src="@drawable/emobile_logo" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_marginLeft="@dimen/padding_too_large_30"
                android:layout_marginRight="@dimen/padding_too_large_30"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/padding_small_5"
                android:paddingTop="@dimen/padding_small_5" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:layout_marginLeft="@dimen/padding_too_large_30"
                android:layout_marginRight="@dimen/padding_too_large_30"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/padding_small_5"
                android:paddingTop="@dimen/padding_small_5" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassword"
                android:layout_marginBottom="@dimen/padding_too_large_30"
                android:layout_marginLeft="@dimen/padding_too_large_30"
                android:layout_marginRight="@dimen/padding_too_large_30"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:background="@drawable/rounder_black_login"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_too_large_30"
                android:layout_marginTop="@dimen/padding_medim_10"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/llNewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLogin"
                android:layout_marginRight="@dimen/padding_too_large_30"
                android:layout_marginTop="@dimen/padding_too_large_30"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/new_user"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_small_5"
                    android:layout_toRightOf="@id/tvNewUser"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/signup"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</layout>